# aster

./: .gitignore  LICENSE  README.md  demo.py  eval.proto  eval.py  eval_util.py  evaluator.py  pipeline.proto  train.proto  train.py  trainer.py
builders/: ._embedding_builder_test.py  attention_recognition_model_builder_test.py  bidirectional_rnn_builder.py  bidirectional_rnn_builder_test.py  convnet_builder.py  convnet_builder_test.py  ctc_recognition_model_builder_test.py  decoder_builder.py  decoder_builder_test.py  embedding_builder.py  embedding_builder_test.py  feature_extractor_builder.py  feature_extractor_builder_test.py  hyperparams_builder.py  hyperparams_builder_test.py  input_reader_builder.py  input_reader_builder_test.py  label_map_builder.py  label_map_builder_test.py  loss_builder.py  loss_builder_test.py  model_builder.py  model_builder_test.py  optimizer_builder.py  optimizer_builder_test.py  predictor_builder.py  predictor_builder_test.py  preprocessor_builder.py  preprocessor_builder_test.py  rnn_cell_builder.py  rnn_cell_builder_test.py  spatial_transformer_builder.py  spatial_transformer_builder_test.py
c_ops/: CMakeLists.txt  build.sh  divide_curve_op.cc  librare.dylib  ops.py  ops_test.py  string_filtering_op.cc  string_reverse_op.cc
convnets/: crnn_net.py  resnet.py  stn_convnet.py
core/: batcher.py  bidirectional_rnn.proto  bidirectional_rnn.py  bidirectional_rnn_test.py  convnet.py  embedding.py  feature_extractor.proto  feature_extractor.py  feature_extractor_test.py  hyperparams.proto  hyperparams.py  hyperparams_test.py  input_reader.py  input_reader_test.py  label_map.py  (+18 more)
(+77 files in other folders)
